<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robta.netwalk.Settings">

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsTV"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/iconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsTV"
        android:layout_alignParentStart="true"
        android:id="@+id/iconStyleTV" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconStyleTV"
        android:layout_alignParentStart="true"
        android:id="@+id/iconStyleRG" >

        <RadioButton
            android:text="@string/classic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconStyleRG"
            android:layout_toStartOf="@+id/settingsTV"
            android:id="@+id/classicRB"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="radioButtonPressed" />

        <RadioButton
            android:text="@string/prototype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prototypeRB"
            android:layout_alignTop="@+id/iconStyleRG"
            android:layout_alignEnd="@+id/settingsTV"
            android:layout_weight="1"
            android:onClick="radioButtonPressed" />

    </RadioGroup>

    <TextView
        android:text="@string/scrambleChence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrambleChanceTV"
        android:layout_below="@+id/iconStyleRG"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrambleChanceTV"
        android:layout_alignParentStart="true"
        android:id="@+id/scrambleChanceRG" >

        <RadioButton
            android:text="@string/enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrambleEnableRB"
            android:layout_below="@+id/scrambleChanceTV"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="radioButtonPressed" />

        <RadioButton
            android:text="@string/disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrambleEnableRB"
            android:layout_toEndOf="@+id/scrambleChanceRG"
            android:id="@+id/scrambleDisableRB"
            android:layout_weight="1"
            android:onClick="radioButtonPressed" />
    </RadioGroup>

</RelativeLayout>
